--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,24 @@
 body {
     text-align: center;
+    background-color: #eee5e5;
+    font-family: 'Lato', sans-serif;
+
 }
 
 h1 {
-    font-family: Monoton;
+    font-family: 'Lato', sans-serif;
     font-size: 70px;
     margin: 0.2em;
+    text-shadow: 2px 2px 4px grey;
 }
 
 h2 {
+    font-family: 'Lato', sans-serif;
+    font-size: 45px;
     margin: 1em 0 0.25em;
+    color: solid grey;
+    text-shadow: 2px 2px 4px grey;
+
 }
 
 h2:first-of-type {
@@ -33,8 +42,11 @@ tr {
 
 td {
     width: 20px;
+    transition: background-color 0.2s ease-in 0.15s;
 }
 
 input[type=number] {
     width: 6em;
 }
+
+
